# NanoEncoder

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
docs/: FAQ.md  ToS.md  _config.yml  about-crf.md  alternative-projects.md  commands.md  ffmpeg-settings.md  health.md  index.md  installation.md  logging.md  optimize.md  purge.md  untag.md
docs/commands/: health.md  optimize.md  purge.md  untag.md
imgs/: ascii_logo.txt
src/nano_encoder/: __init__.py  cli.py  encode.py  exceptions.py  healthcheck.py  logger.py  nano_encoder.py  optimize.py  purge.py  utils.py  video_encoder.py  video_optimizer.py
src/nano_encoder/commands/: __init__.py  base_command.py  healthcheck.py  optimize.py  purge.py  untag.py
src/nano_encoder/commands/optimize/: optimize.py  video_optimizer.py
